# Parolu

./: .gitignore  README.md  im.bernard.Parolu.json  meson.build  parolu.gresource
data/: im.bernard.Parolu.gresource.xml  im.bernard.Parolu.metainfo.xml.in  meson.build
po/: POTFILES.in  de-backup.po  de.po  parolu.pot
src/: meson.build  parolu.gresource.xml  pipervoice.py  reader.py  vocx.py  vocxpo.py  window.py  window.ui
